refactor app.yml use the webclient